--- a/project_Js/L.html
+++ b/project_Js/L.html
@@ -91,7 +91,7 @@
             </div>
 
             <div class="right slider-1">
-                <div class="content">
+                <!-- <div class="content"> -->
                     <div class="owl-carousel owl-theme">
 
                         <div class="item" style="background-image: url('assets/img/brim.png');">
@@ -205,7 +205,7 @@
                         </div>
 
                     </div>
-                </div>
+                <!-- </div> -->
               
             </div>
         </div>
